# finance-mcp

./: .gitignore  README.md  README_ZH.md  example.env  pyproject.toml
extract_ths_tool_cache/: add_source_url.py  compress.sh  extract.sh  merge.py  sync_progress.py
finance_mcp/: __init__.py  main.py
finance_mcp/config/: agent.yaml  default.yaml  mcp.yaml  ths.yaml  ths_local.yaml
finance_mcp/core/: __init__.py
finance_mcp/core/agent/: __init__.py  conduct_research_op.py  dashscope_deep_research_op.py  langchain_deep_research_op.py  react_agent_op.py  react_agent_prompt.yaml  research_complete_op.py  think_tool_op.py
finance_mcp/core/akshare/: __init__.py  akshare_calculate_op.py
finance_mcp/core/crawl/: __init__.py  crawl4ai_op.py  read_local_ths_op.py
finance_mcp/core/extract/: __init__.py  extract_entities_code_op.py  extract_long_text_op.py
finance_mcp/core/findata/: __init__.py  history_calculate_op.py  history_calculate_prompt.yaml
finance_mcp/core/gallery/: __init__.py  execute_code_op.py  execute_shell_op.py
finance_mcp/core/search/: __init__.py  dashscope_search_op.py  google_search_op.py  google_search_prompt.yaml  mcp_search_op.py  mock_search_op.py  tavily_search_op.py  web_scrape_op.py  web_scrape_prompt.yaml
finmcp/: __init__.py  main.py
finmcp/config/: agent.yaml  default.yaml  ths.yaml
finmcp/core/agent/: __init__.py  (+2 more)
old/ah/: ah_backtest_op.py  ah_download_op.py  ah_feature_op.py  ah_fix_op.py
test_op/: clean_empty_results.py  test_akshare.py  test_conduct_research.py  test_crawl4ai_op.py  test_dashscope_deep_research.py  test_extract_entities.py  test_google_search.py  test_langchain_deep_research_op.py  test_mcp_stdio.py  test_project_http.py  test_project_mcp.py  test_project_sse.py  test_ths_sse.py  test_web_scrape.py  ths_sse.py
(+22 files in other folders)
