[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-mcp"
dynamic = ["version"]
description = "todo"
authors = [
    { name = "jinli.yl", email = "jinli.yl@alibaba-inc.com" },
    { name = "taoshuchang.tsc", email = "taoshuchang.tsc@alibaba-inc.com" },
]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["fin", "mcp"]
requires-python = ">=3.10"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]

dependencies = [
    "tushare",
    "crawl4ai>=0.7.4",
    "flowllm>=0.2.0.6",
    "tavily-python>=0.7.13",
]

[project.optional-dependencies]

dev = [
    "pytest>=8.4.2",
    "pytest_asyncio>=1.2.0",
    "pre-commit",
    "mkdocs-shadcn",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["finance_mcp*"]

[tool.setuptools.package-data]
flowllm = [
    "**/*.yaml",
]

[tool.setuptools.dynamic]
version = {attr = "finance_mcp.__version__"}

[project.urls]
Homepage = "https://github.com/flowllm-ai/finance-mcp"
Documentation = "https://flowllm-ai.github.io/finance-mcp/"
Repository = "https://github.com/flowllm-ai/finance-mcp"

[project.scripts]
finance-mcp = "finance_mcp.main:main"

